--- a/style.css
+++ b/style.css
@@ -612,11 +612,12 @@ p {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    align-items: center;
   
 }
 
 #contact .contact-item {
-    width: 70%;
+    width: 60%;
     padding: 20px;
     text-align: center;
     border-radius: 10px;
